@@ -25,3 +25,4 @@ stamp-h
 stamp-h.in
 testart
 testuta
+libart-config
